# Schiphol-Airport-Parking-Reservation-Assistant

./: .env .example  .gitignore  INITIALIZATION_sqlite_db.py  INITIALIZATION_weaviate_vector_db.py  README.md  check_validity.py  commands  docker-compose.yaml  parking_static_data.joblib  pyproject.toml  requirements.txt  valid_dutch_car_numbers_plates
Stage_1/: Stage_1.py  main.py  rag_evaluator.py  test_stage_1_chatbot.py  tests.py
Stage_2/: Stage_2.py  main.py  main_with_agent_admin.py  main_with_human_admin.py  test_stage_2_chatbot_admin.py  tests.py
Stage_3/: Stage_3.py  main.py  main_with_agent_admin.py  main_with_human_admin.py
Stage_4/: Stage_4.py  main.py  main_with_agent_admin.py  main_with_human_admin.py
app/: AGENT_ADMIN.py  AGENT_CHATBOT.py  GUARD_RAILS.py  MCP_SERVER.py  MCP_SERVER_calling.py
collections/static_parking_info_collection/48plljo8m9i0/: proplengths
functions/: FUNCTIONS_SANITIZE_input.py  FUNCTION_helpers_READ_tools.py  FUNCTION_helpers_WRITE_tools.py
logs/: confirmed_reservations_events.txt
scripts/: database_seeding.py  weaviate_seeding.py
src/parking/: config.py
src/parking/agents/: __init__.py  admin.py
src/parking/database/: __init__.py  connection.py  schema.py  seed.py  vector.py  vector_seed.py
src/parking/mcp/: __init__.py  api.py  router.py  server.py
src/parking/pipeline/: __init__.py  graph_with_agent_admin.py  graph_with_human_admin.py
src/schiphol_parking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: TOOLS_human_agent.py  TOOLS_sqlite_READ.py  TOOLS_sqlite_WRITE.py  TOOLS_weaviate.py
(+18 files in other folders)
